# autogs-template

./: README.md  pyproject.toml
docs/: Basic Usage.ipynb  index.md  quickstart.md
